--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </ul>
     </nav>
     <main>
-        <h2>Welcome to the Test Page</h2>
+        <h2>Welcome to the Test Page!</h2>
         <p>This is a simple mock-up web page for testing purposes.</p>
         <p>Please talk to Maxwell Dulski to solve all your problems.</p>
     </main>
