--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
 
       header {
-        background-color: #333;
+        background-color: #025ea9;
         color: #fff;
         padding: 20px;
         text-align: center;
