--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </main>
     <footer>&copy; 2023 Test Page</footer>
 
-    <!-- Live Chat just for Live Opeerator -->
+    <!-- Chatbot -->
     <script type="text/javascript">
       var $zoho = $zoho || {};
       $zoho.salesiq = $zoho.salesiq || {
