--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
 
       nav {
-        background-color: #444;
+        background-color: #A5A5A5;
         color: #fff;
         padding: 10px;
         text-align: center;
