--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       <p>If that doesn't work, talk to Paul to solve all your problems.</p>
       <p>If that doesn't work, talk to Greg to solve all your problems.</p>
       <p>If that doesn't work, talk to Alex to solve all your problems.</p>
+      <p>If that doesn't work, talk to Qu to solve all your problems.</p>
       <p>If that doesn't work, talk to Bob to solve all your problems.</p>
       <p>If that doesn't work, give up</p>
     </main>
