--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
 
       nav {
-        background-color: #A5A5A5;
+        background-color: #a5a5a5;
         color: #fff;
         padding: 10px;
         text-align: center;
@@ -66,16 +66,18 @@
     </nav>
     <main>
       <h2>Welcome to the Test Page!</h2>
-      <p>This is a simple mock-up web page for testing purposes.</p>
-      <p>Please talk to Maxwell Dulski to solve all your problems.</p>
-      <p>If that doesn't work, talk to Eric to solve all your problems.</p>
-      <p>If that doesn't work, talk to Jason to solve all your problems.</p>
-      <p>If that doesn't work, talk to Paul to solve all your problems.</p>
-      <p>If that doesn't work, talk to Greg to solve all your problems.</p>
-      <p>If that doesn't work, talk to Alex to solve all your problems.</p>
-      <p>If that doesn't work, talk to Qu to solve all your problems.</p>
-      <p>If that doesn't work, talk to Bob to solve all your problems.</p>
-      <p>If that doesn't work, give up</p>
+      <pre><![CDATA[
+        <p>This is a simple mock-up web page for testing purposes.</p>
+          <p>Please talk to Maxwell Dulski to solve all your problems.</p>
+            <p>If that doesn't work, talk to Eric to solve all your problems.</p>
+              <p>If that doesn't work, talk to Jason to solve all your problems.</p>
+                <p>If that doesn't work, talk to Paul to solve all your problems.</p>
+                  <p>If that doesn't work, talk to Greg to solve all your problems.</p>
+                    <p>If that doesn't work, talk to Alex to solve all your problems.</p>
+                      <p>If that doesn't work, talk to Qu to solve all your problems.</p>
+                        <p>If that doesn't work, talk to Bob to solve all your problems.</p>
+                          <p>If that doesn't work, give up</p>
+      ]]></pre>
     </main>
     <footer>&copy; 2023 Test Page</footer>
 
